Realizados todas las siguientes actualizaciones:
Luego de la reunion de revision de la aplicacion de sha se encontraron
los siguientes puntos a modificar:
limpiar la lista de sucursales (en base a la que esta en el archivo
adjunto)

cambiar el nombre "carga accidental" a "accidentes semanales"(tanto en
el titulo como en los botones asociados)

agregar antes del area un  autocomplete de sucursales igual al otro
listado y se llamara ("centro operativo donde ocurrio el
evento")(limitado a las sucursales del usuario)

cambiar area por: "area especifica donde ocurrieron los hechos"

cambiar texto de tipo de incapacidad a lo que esta escrito en el archivo
adjunto

colocar la limitacion de caracteres en el campo de descripcion de los
hechos a 2000

En el detalle del evento agregar todas las partes que se cargan arriba,
no solo la descripcion 

arreglado counter's y divididos para counter de admins y counter de
regulares.

arreglados algunos logos y orden de los menus en sentido alfabetico

--- a/sha/WebContent/ct/chgpwd.xhtml
+++ b/sha/WebContent/ct/chgpwd.xhtml
@@ -89,7 +89,7 @@
 		<br />
 		<h:form>
 			<center>
-				<p:commandButton value="CARGA ACCIDENTAL - LOGIN" icon=""
+				<p:commandButton value="ACCIDENTES SEMANALES - LOGIN" icon=""
 					action="#{loginBean.logout}" />
 			</center>
 		</h:form>
