--- a/sha/WebContent/ct/common/menu.xhtml
+++ b/sha/WebContent/ct/common/menu.xhtml
@@ -28,7 +28,7 @@
 	<ul class="sidebar-nav">
 		<!-- Home -->
 		<li  id="current" class="active">
-         <h:outputLink value="dotconvenios.xhtml" onclick="mnuDot()"><i class="fa fa-home fa-2x"></i><span class="mnuLeftBasicos">CARGA ACCIDENTAL - HOME</span></h:outputLink>
+         <h:outputLink value="dotconvenios.xhtml" onclick="mnuDot()"><i class="fa fa-home fa-2x"></i><span class="mnuLeftBasicos">ACCIDENTES SEMANALES - HOME</span></h:outputLink>
         </li>
         
           <!-- Sha -->
