--- a/sha/WebContent/ct/common/cabeceras.xhtml
+++ b/sha/WebContent/ct/common/cabeceras.xhtml
@@ -37,6 +37,6 @@
     <f:loadBundle basename="org.sha.util.MessagesBundle_es_VEN" var="msg"/> 
     <link href="http://fonts.googleapis.com/css?family=Ubuntu"
 		rel="stylesheet" type="text/css" />
-<title>Carga Accidental</title>
+<title>Accidentes Semanales</title>
 </h:head>
 </html>
