--- a/sha/WebContent/ct/common/timeout.xhtml
+++ b/sha/WebContent/ct/common/timeout.xhtml
@@ -35,7 +35,7 @@
 		<br />
 		<h:form>
 			<center>
-				<p:commandButton value="CARGA ACCIDENTAL - LOGIN" icon=""
+				<p:commandButton value="ACCIDENTES SEMANALES - LOGIN" icon=""
 					action="#{loginBean.logout}" />
 			</center>
 		</h:form>
