--- a/sha/WebContent/loginExternal.xhtml
+++ b/sha/WebContent/loginExternal.xhtml
@@ -37,7 +37,7 @@
 	<link href="http://fonts.googleapis.com/css?family=Ubuntu"
 		rel="stylesheet" type="text/css" />
 
-	<title>CARGA ACCIDENTAL - LOGIN</title>
+	<title>ACCIDENTES SEMANALES - LOGIN</title>
 </h:head>
 <h:body>
 	<f:loadBundle basename="org.sha.util.MessagesBundle_es_VEN"
