cambio de titulos a Indicadores Sha.

--- a/sha/WebContent/ct/shaincidencias.xhtml
+++ b/sha/WebContent/ct/shaincidencias.xhtml
@@ -279,7 +279,7 @@
             <input type="checkbox" name="toDelete" class="chk" value="#{tb.zregist}"/>
             </p:column>  
             
-			<p:column sortBy="#{tb.zCI}" styleClass="wrap" >  
+			<p:column sortBy="#{tb.zCI}" styleClass="wrap" style="width:150px;">  
             <f:facet name="header">#{msg.Shaincidenciastbci}</f:facet>  
             <h:outputLabel value="#{tb.zci}" onclick="mymodal2('#{tb.zcompany}','#{tb.zuno}','#{tb.znomina}','#{tb.zsucursal}','#{tb.zdepartamento}','#{tb.ztres}');"
             onmouseover="" style="cursor: pointer;"/>
