--- a/sha/WebContent/login.xhtml
+++ b/sha/WebContent/login.xhtml
@@ -36,7 +36,7 @@
 	<link rel="shortcut icon" href="resources/img/Workers.png" />
 	<link href="http://fonts.googleapis.com/css?family=Ubuntu"
 		rel="stylesheet" type="text/css" />
-	<title>ACCIDENTES SEMANALES - LOGIN</title>
+	<title>INDICADORES SHA - LOGIN</title>
 </h:head>
 <h:body onload="inicio();">
 	<f:loadBundle basename="org.sha.util.MessagesBundle_es_VEN"
