Finalizado desarrollo de nuevos módulos de la aplicación de carga accidental y cambios a solicitud del Sr. Gustavo. junto con algunas actualizaciones para el mismo modulo, cambios como Agregar al personal de la nomina confidencial al listado de empleados, El campo tipo de lesión pasa a ser un autocomplete con una lista de tipos de lesion fija que el departamento de sha debe enviar, Antes del campo de inpsasel, se debe colocar un campo con la descripción “El accidente fue reportado:” que tenga un select simple de “si” o “no” Dependiendo de la eleccion del usuario, se le presentara un ultimo campo, el cual varia entre “Codigo inpsasel” y “Razon por la que no fue reportado” Nota: “Razón por la que no fue reportado” es un complete (CREARLE UN MAESTRO) Solo el usuario administrador puede editar y borrar En todas las ventas b.-Migrar aplicación de desarrollo a productivo (Por un tema en la conexión a baan en el servidor

--- a/sha/WebContent/ct/shametas.xhtml
+++ b/sha/WebContent/ct/shametas.xhtml
@@ -86,7 +86,7 @@
 				 
 	  	  
 	   <!-- Panel -->      
-     <div class="panel panel-info">
+     <div class="panel panel-warning">
      <div class="panel-body">
      <p:panel id="panel" widgetVar="panelwv" header="#{msg.shametastit}" toggleable="true" collapsed="true" style="white-space: normal;">	  
         <div class="row">
