--- a/sha/WebContent/ct/shasuc.xhtml
+++ b/sha/WebContent/ct/shasuc.xhtml
@@ -84,7 +84,7 @@
 				 
 	  	  
 	   <!-- Panel -->      
-     <div class="panel panel-info">
+     <div class="panel panel-warning">
      <div class="panel-body">
      <p:panel id="panel" widgetVar="panelwv" header="#{msg.shasuctit}" toggleable="true" collapsed="true" style="white-space: normal;">	  
      <div class="pull-right"><a HREF="http://www.openbizview.com/wiki/doku.php?id=reportes" target="_new" title="Wiki"><i class="fa fa-file-text text-info"></i></a></div>	         
