CAMBIO DEL LOGO Y ARREGLO DE LA COLUMNA DE BUSQUEDA DE VALORES POR FECHA.

--- a/sha/WebContent/chgpass.xhtml
+++ b/sha/WebContent/chgpass.xhtml
@@ -55,7 +55,7 @@
 					</div>
 					<center>
 					<img src="resources/img/sha.jpg" class="img-responsive" alt="Cinque Terre" width="200" height="200"/> 	
-					<p:outputLabel id="sha" style="color:#ff9900; font-size:150%;" value="Seguridad, Higiene y Ambiente."/>				
+					<p:outputLabel id="sha" style="color:#ff9900; font-size:150%;" value="Servicio de Seguridad y Salud en el Trabajo."/>				
 					</center>
 					<div class="panel-body">
 						<h:form id="loginform">
