--- a/sha/WebContent/ct/shaincidencias.xhtml
+++ b/sha/WebContent/ct/shaincidencias.xhtml
@@ -327,7 +327,7 @@
             <h:outputLabel value="#{tb.zfevento}" />
             </p:column> 
             
-            <p:column sortBy="#{tb.zAREA}" styleClass="wrap" >  
+            <p:column sortBy="#{tb.zAREAEVENT}" styleClass="wrap" >  
             <f:facet name="header">#{msg.Shaincidenciastblu}</f:facet>  
             <h:outputLabel value="#{tb.zarea}" />
             </p:column> 
