--- a/sha/WebContent/login.xhtml
+++ b/sha/WebContent/login.xhtml
@@ -14,7 +14,7 @@
     una información más detallada. 
 
     Debería haber recibido una copia de la Licencia Pública General GNU 
-    junto a este programa. 
+    junto a este programa.
     En caso contrario, consulte <http://www.gnu.org/licenses/>.
  -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
@@ -36,7 +36,7 @@
 	<link rel="shortcut icon" href="resources/img/Workers.png" />
 	<link href="http://fonts.googleapis.com/css?family=Ubuntu"
 		rel="stylesheet" type="text/css" />
-	<title>INDICADORES SHA - LOGIN</title>
+	<title>INDICADORES SSST - LOGIN</title>
 </h:head>
 <h:body onload="inicio();">
 	<f:loadBundle basename="org.sha.util.MessagesBundle_es_VEN"
@@ -55,7 +55,7 @@
 					</div>
 					<center>
 						<img src="resources/img/sha.jpg" class="img-responsive" alt="Cinque Terre" width="200" height="200"/>
-						<p:outputLabel id="sha" style="color:#ff9900; font-size:150%;" value="Seguridad, Higiene y Ambiente."/>
+						<p:outputLabel id="sha" style="color:#ff9900; font-size:150%;" value="Servicio de Seguridad y Salud en el Trabajo."/>
 					</center>
 					<div class="panel-body" >
 						<h:form id="loginform">
